--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 asgiref==3.5.2
+black==22.10.0
+click==8.1.3
 Django==4.1.4
+Faker==15.3.4
+fontawesomefree==6.2.1
+mypy-extensions==0.4.3
+pathspec==0.10.2
+platformdirs==2.6.0
+psycopg2-binary==2.9.5
+python-dateutil==2.8.2
+six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
