--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ asgiref==3.5.2
 black==22.10.0
 click==8.1.3
 Django==4.1.4
+django-stdimage==6.0.1
 Faker==15.3.4
 fontawesomefree==6.2.1
 mypy-extensions==0.4.3
 pathspec==0.10.2
+Pillow==9.3.0
 platformdirs==2.6.0
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
