--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,16 @@
     "builds": [{
         "src": "clinica/wsgi.py",
         "use": "@ardnt/vercel-python-wsgi",
-        "config": { "maxLambdaSize": "15mb" }
+        "config": { 
+            "maxLambdaSize": "15mb",
+            "includeFiles": [
+                "clinica/**",
+                "static/**",
+                "templates/**",
+                "requirements.txt"
+            ],
+            "runtime": "python3.9"
+        }
     }],
     "routes": [
         {
