--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Pillow==9.3.0
 platformdirs==2.6.0
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
+python-decouple==3.6
 six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
