--- a/.env-example
+++ b/.env-example
@@ -6,10 +6,12 @@ SELENIUM_HEADLESS = 0
 # DATABASE_ENGINE = 'django.db.backends.sqlite3'
 # DATABASE_NAME = "./db.sqlite3"
 
+SECRET_KEY='django-insecure-wbnp632un46hnt&1tmuxr4391y)-==h@-6akwsgqu@l_bh^o3h'
+DEBUG=True
 # Postgres
 DATABASE_ENGINE='django.db.backends.postgresql_psycopg2'
-DATABASE_NAME="clinica"
-DATABASE_USER = "postgres"
-DATABASE_PASSWORD = "root"
+DATABASE_NAME="basededados"
+DATABASE_USER = "usuario"
+DATABASE_PASSWORD = "senha"
 DATABASE_HOST = "127.0.0.1"
 DATABASE_PORT = "5432"
