--- a/.env-example
+++ b/.env-example
@@ -7,7 +7,7 @@ SELENIUM_HEADLESS = 0
 # DATABASE_NAME = "./db.sqlite3"
 
 SECRET_KEY='django-insecure-wbnp632un46hnt&1tmuxr4391y)-==h@-6akwsgqu@l_bh^o3h'
-DEBUG=True
+DEBUG=False
 # Postgres
 DATABASE_ENGINE='django.db.backends.postgresql_psycopg2'
 DATABASE_NAME="basededados"
